# Python-Finan-as-BR-PY

./: .env.example  .gitignore  DIRETRIZES_E_METAS.md  Dockerfile  README.md  README_INICIO.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-GitHub.txt  requirements-dev.txt  requirements-minimal.txt  requirements.txt
src/: config.py  main.py
src/compliance/: routers.py
src/core/: config.py  database.py  dependencies.py  security.py
src/financeiro/: routers.py
src/fiscal/: models.py  routers.py
src/rh/: constants.py  models.py  routers.py
